Remove fixed position for logo on mobile

--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -42,6 +42,7 @@ header {
   }
 
   @media screen and (max-width: $mediumdevice) {
+    position: absolute;
     top: -($horizontal-padding);
     bottom: auto;
     left: 0;
